--- a/src/TumblThree/TumblThree.Presentation/Views/ManagerView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/ManagerView.xaml
@@ -187,7 +187,7 @@
                 <DataGridTextColumn x:Name="Url" Header="{x:Static p:Resources.Url}" Binding="{Binding Url}"
                                     IsReadOnly="True" Width="250"
                                     ElementStyle="{StaticResource TextCellElementStyle}" />
-                <DataGridTemplateColumn x:Name="Progress" Header="{x:Static p:Resources.Progress}" Width="200">
+                <DataGridTemplateColumn x:Name="Progress" Header="{x:Static p:Resources.Progress}" Width="200" SortMemberPath="__progress">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <ProgressBar Value="{Binding Progress, Mode=OneWay}" Height="15" Minimum="0" Maximum="100"
@@ -251,7 +251,7 @@
                 <DataGridTextColumn x:Name="Notes" Header="{x:Static p:Resources.Notes}"
                                     Binding="{Binding Notes, Mode=TwoWay}"
                                     IsReadOnly="False" Width="120" ElementStyle="{StaticResource TextCellElementStyle}" />
-                <DataGridTemplateColumn x:Name="Collection" Header="{x:Static p:Resources.Collection}" Width="100">
+                <DataGridTemplateColumn x:Name="Collection" Header="{x:Static p:Resources.Collection}" Width="100" SortMemberPath="__collection">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <TextBlock>
