added minimum-width to individual views

--- a/src/TumblThree/TumblThree.Presentation/Views/DetailsViews/DetailsNewTumblBlogView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/DetailsViews/DetailsNewTumblBlogView.xaml
@@ -108,7 +108,7 @@
             <Grid Margin="11">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" MinWidth="30" />
                     <ColumnDefinition Width="{StaticResource Layout.ColumnSpace}" />
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
